# enitorpay-backend

./: LICENSE  README.md  README_API.md  pyproject.toml
docs/: CHECKPOINT_v0.2.5-safe.md  README.md
migrations/: env.py
migrations/versions/: 36981f27b9a0_v0_1_initial_schema.py  538ee1c2a2a8_add_employee_table.py  b08a5fcb7665_add_fk_employee_company_id_company_id.py
src/agents/: config.py
src/agents/aiops_hub/: aiops_controller.py
src/agents/devprep_agent/: devprep_agent.py
src/agents/devprep_agent/docs/: README.md
src/agents/docbuilder_agent/: docbuilder_agent.py
src/agents/infrawatch_agent/: infrawatch_agent.py
src/agents/research_agent/: research_agent.py
src/app/: config.py  db.py  main.py  secrets.py  seed_data.py  seed_employees.py
src/app/core/: config.py
src/app/db/: base.py  session.py
src/app/models/: __init__.py  base.py  catalogs.py  company.py  employee.py  pay_setup.py  payroll.py
src/app/routers/: aiops.py  companies.py  dbtest.py  employees.py  health.py  paychecks.py  payroll.py
src/app/schemas/: employee.py  paycheck.py  payroll.py
