[tool.poetry]
name = "enitorpay-backend"
version = "0.1.0"
description = "EnitorPay payroll bureau backend (FastAPI)"
authors = ["Enitor, Inc. <alberto@enitorinc.com>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {version="^0.30", extras=["standard"]}
pydantic = "^2.8"
pydantic-settings = "^2.4"
boto3 = "^1.34"
SQLAlchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
jinja2 = "^3.1"
reportlab = "^4.1"
python-dateutil = "^2.9"
typer = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.6"
mypy = "^1.10"
httpx = "^0.27"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aiops = "agents.aiops_hub.aiops_controller:main"
